menu-collapse no longer needed

--- a/administrator/templates/atum/scss/template-rtl.scss
+++ b/administrator/templates/atum/scss/template-rtl.scss
@@ -8,13 +8,6 @@ ul {
   padding-right: 0;
 }
 
-.menu-collapse {
-  right: 0;
-  left: auto;
-  margin-right: -7.5px;
-  margin-left: 0;
-}
-
 // Redirect urls fields
 #jform_new_url,
 #jform_old_url,
